# pay4what

./: .loop-plan.md  CHANGELOG.md  Cargo.toml  README.md  pay4what-demo.tape
.github/workflows/: ci.yml
docs/: readme-best-practices-research.md
examples/: astbench_compare.rs  db_analysis.rs  debug_llm.rs  dogfood_check.rs  find_supabase_task.rs  prove_real.rs
src/: categorize.rs  cost.rs  discover.rs  lib.rs  main.rs  parse.rs  render.rs  segment.rs  store.rs
tests/: categorize.rs  cost.rs  parse_discover.rs  render.rs  segment.rs  store.rs
